# baxter_projectyouth

./: CMakeLists.txt  README.md  package.xml  setup.py
sandbox/: Untitled.ipynb  has_stdin.py  left_saved_joints.py  main.py  play.ipynb  play.py  right_saved_joints.py  util.py
scripts/: easy_playback.py  easy_playback_left.py  easy_playback_right.py  easy_recorder.py
src/baxter_projectyouth/: JointPlayer.py  __init__.py  common_positions.py  util.py
teach/: init_wave.py  part_01.py  part_02.py  part_03.py  part_04.py  part_05.py  part_06.py  path_play.py  play_paino.py
