<?xml version="1.0"?>
<package>
  <name>baxter_projectyouth</name>
  <version>0.1.0</version>
  <description>
    Tutorial package for Project Youth to interact with Baxter
  </description>

  <author email="michael.bentley@utah.edu">Michael Bentley</author>
  <maintainer email="michael.bentley@utah.edu">Michael Bentley</maintainer>
  <license>MIT</license>
  <url type="repository">
    https://github.com/mikebentley15/baxter_projectyouth
  </url>
  <url type="bugtracker">
    https://github.com/mikebentley15/baxter_projectyouth/issues
  </url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>baxter_interface</build_depend>
  <build_depend>rospy</build_depend>

  <run_depend>baxter_interface</run_depend>
  <run_depend>rospy</run_depend>

</package>
